force-app/main/default/objects/vlocity_ps__VlocityAction__c/fields/vlocity_ps__AdditionalFilter__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__AdditionalFilter__c</fullName>
    <label>Additional Filter</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>