force-app/main/default/objects/vlocity_ps__VlocityAction__c/fields/vlocity_ps__ApplicablePermissionName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ApplicablePermissionName__c</fullName>
    <label>Applicable Permission Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>