force-app/main/default/objects/vlocity_ps__VlocityAction__c/fields/vlocity_ps__ApplicableTypes__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ApplicableTypes__c</fullName>
    <label>Applicable Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Child Welfare</fullName>
            </value>
            <value>
                <fullName>Incident</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>