force-app/main/default/objects/vlocity_ps__VlocityAction__c/fields/vlocity_ps__ApplicableUserProfiles__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ApplicableUserProfiles__c</fullName>
    <label>Applicable User Profile</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Vlocity Admin</fullName>
            </value>
            <value>
                <fullName>Vlocity Health</fullName>
            </value>
            <value>
                <fullName>Vlocity Insurance</fullName>
            </value>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
            <value>
                <fullName>Vlocity Partner Community User</fullName>
            </value>
            <value>
                <fullName>System Administrator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>