force-app/main/default/objects/vlocity_ps__VlocityAction__c/fields/vlocity_ps__Category__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Category__c</fullName>
    <label>Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>