force-app/main/default/objects/vlocity_ps__VlocityAction__c/fields/vlocity_ps__DisplayLabel__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__DisplayLabel__c</fullName>
    <label>Display Label</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>