force-app/main/default/objects/vlocity_ps__VlocityAction__c/fields/vlocity_ps__DisplaySequenceOrder__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__DisplaySequenceOrder__c</fullName>
    <label>Portal Display Sequence</label>
    <length>2</length>
    <type>Text</type>
</CustomField>