force-app/main/default/objects/vlocity_ps__VlocityAction__c/fields/vlocity_ps__ExecutionSequence__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ExecutionSequence__c</fullName>
    <description>Determines the order in which Vlocity Actions are executed during a state transition.</description>
    <label>Execution Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>