force-app/main/default/objects/vlocity_ps__VlocityAction__c/fields/vlocity_ps__IsSeedAction__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__IsSeedAction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Seed Action</label>
    <type>Checkbox</type>
</CustomField>