force-app/main/default/objects/vlocity_ps__VlocityAction__c/fields/vlocity_ps__ParentActionId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ParentActionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Action</label>
    <referenceTo>vlocity_ps__VlocityAction__c</referenceTo>
    <relationshipLabel>Vlocity Actions</relationshipLabel>
    <relationshipName>VlocityActions</relationshipName>
    <type>Lookup</type>
</CustomField>