force-app/main/default/objects/vlocity_ps__VlocityAction__c/fields/vlocity_ps__Program__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Program__c</fullName>
    <label>Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
            <value>
                <fullName>Housing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>