force-app/main/default/objects/vlocity_ps__VlocityAction__c/fields/vlocity_ps__ProgramEnrollmentStage__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ProgramEnrollmentStage__c</fullName>
    <description>Actions in left navigation of Housing portal need to be dynamic based on status of Program Enrollment</description>
    <label>Program Enrollment Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending Review</fullName>
            </value>
            <value>
                <fullName>Placement</fullName>
            </value>
            <value>
                <fullName>Approved for Waitlist</fullName>
            </value>
            <value>
                <fullName>Waitlist</fullName>
            </value>
            <value>
                <fullName>Unit Ready</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>