force-app/main/default/objects/vlocity_ps__VlocityAction__c/fields/vlocity_ps__QBActionType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__QBActionType__c</fullName>
    <label>QBActionType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>Row</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>