force-app/main/default/objects/vlocity_ps__VlocityAction__c/fields/vlocity_ps__QueryBuilderId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__QueryBuilderId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QueryBuilderId</label>
    <referenceTo>vlocity_ps__QueryBuilder__c</referenceTo>
    <relationshipLabel>Vlocity Actions</relationshipLabel>
    <relationshipName>VlocityActionQB</relationshipName>
    <type>Lookup</type>
</CustomField>