force-app/main/default/objects/vlocity_ps__VlocityAction__c/fields/vlocity_ps__Url__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Url__c</fullName>
    <label>Target URL</label>
    <type>TextArea</type>
</CustomField>