force-app/main/default/objects/vlocity_ps__VlocityAction__c/fields/vlocity_ps__UrlParameters__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__UrlParameters__c</fullName>
    <label>URL Parameter</label>
    <type>TextArea</type>
</CustomField>