force-app/main/default/objects/vlocity_ps__VlocityAction__c/fields/vlocity_ps__ValidationMethodName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ValidationMethodName__c</fullName>
    <label>Validation Method Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>