force-app/main/default/objects/vlocity_ps__VlocityAction__c/fields/vlocity_ps__VlocityIcon__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__VlocityIcon__c</fullName>
    <defaultValue>&apos;icon-v-document1-line&apos;</defaultValue>
    <inlineHelpText>Choose an icon from the list of icons below the Vlocity Action Detail (will not show up in Vlocity Action Edit) by copying its class name here (i.e. icon-v-document1-line). Use attachment to load custom image.</inlineHelpText>
    <label>Vlocity Icon</label>
    <length>100</length>
    <type>Text</type>
</CustomField>